--- a/jupyter_notebook_basis.ipynb
+++ b/jupyter_notebook_basis.ipynb
@@ -14,7 +14,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#設定你的jupyter-notebook\" data-toc-modified-id=\"設定你的jupyter-notebook-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>設定你的jupyter notebook</a></span><ul class=\"toc-item\"><li><span><a href=\"#notebook-環境設定\" data-toc-modified-id=\"notebook-環境設定-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>notebook 環境設定</a></span></li><li><span><a href=\"#notebook-起始資料夾路徑設定\" data-toc-modified-id=\"notebook-起始資料夾路徑設定-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>notebook 起始資料夾路徑設定</a></span></li><li><span><a href=\"#安裝jupyter-notebook-擴充套件\" data-toc-modified-id=\"安裝jupyter-notebook-擴充套件-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>安裝jupyter notebook 擴充套件</a></span></li></ul></li><li><span><a href=\"#使用jupyter-notebook\" data-toc-modified-id=\"使用jupyter-notebook-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>使用jupyter notebook</a></span><ul class=\"toc-item\"><li><span><a href=\"#新增notebook、資料夾\" data-toc-modified-id=\"新增notebook、資料夾-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>新增notebook、資料夾</a></span></li><li><span><a href=\"#Cell\" data-toc-modified-id=\"Cell-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Cell</a></span></li><li><span><a href=\"#快捷鍵與輸入模式\" data-toc-modified-id=\"快捷鍵與輸入模式-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>快捷鍵與輸入模式</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#設定你的jupyter-notebook\" data-toc-modified-id=\"設定你的jupyter-notebook-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>設定你的jupyter notebook</a></span><ul class=\"toc-item\"><li><span><a href=\"#notebook-環境設定\" data-toc-modified-id=\"notebook-環境設定-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>notebook 環境設定</a></span></li><li><span><a href=\"#notebook-起始資料夾路徑設定\" data-toc-modified-id=\"notebook-起始資料夾路徑設定-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>notebook 起始資料夾路徑設定</a></span></li><li><span><a href=\"#安裝jupyter-notebook-擴充套件\" data-toc-modified-id=\"安裝jupyter-notebook-擴充套件-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>安裝jupyter notebook 擴充套件</a></span></li></ul></li><li><span><a href=\"#使用jupyter-notebook\" data-toc-modified-id=\"使用jupyter-notebook-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>使用jupyter notebook</a></span><ul class=\"toc-item\"><li><span><a href=\"#新增notebook、資料夾\" data-toc-modified-id=\"新增notebook、資料夾-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>新增notebook、資料夾</a></span></li><li><span><a href=\"#Cell\" data-toc-modified-id=\"Cell-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Cell</a></span></li><li><span><a href=\"#快捷鍵與輸入模式\" data-toc-modified-id=\"快捷鍵與輸入模式-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>快捷鍵與輸入模式</a></span></li></ul></li><li><span><a href=\"#Conditional-Statements\" data-toc-modified-id=\"Conditional-Statements-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Conditional Statements</a></span></li></ul></div>"
    ]
   },
   {
@@ -116,18 +116,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 新增notebook、資料夾"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "1. 下拉new\n",
     "2. Notebook 選項中可選擇已安裝的anaconda環境"
@@ -183,6 +179,9 @@
     "            Cell轉入 Markdown type\n",
     "        7. X  \n",
     "            刪除cell\n",
+    "        8. O  \n",
+    "            隱藏該 cell 的 output\n",
+    "        9. \n",
     "2. 編輯模式\n",
     "    1. 編輯模式為編輯 cell 內容的模式\n",
     "    2. 常用快捷鍵\n",
@@ -201,30 +200,28 @@
     "            跳到左邊、右邊1個字\n",
     "        8. Ctrl-L、Ctrl-Shift-L  \n",
     "            Code prettify 自動排整齊功能\n",
+    "        9. Alt-F  \n",
+    "            Toggle codefolding\n",
     "3. [Jupyter NoteBook 的快捷键使用指南](http://opus.konghy.cn/ipynb/jupyter-notebook-keyboard-shortcut.html)\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "run_control": {
      "marked": false
     }
    },
-   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "run_control": {
      "marked": false
     }
    },
-   "outputs": [],
    "source": []
   },
   {
@@ -525,7 +522,7 @@
    "oldHeight": 122.4,
    "position": {
     "height": "144px",
-    "left": "1182px",
+    "left": "1117px",
     "right": "20px",
     "top": "340px",
     "width": "350px"
