--- a/Intermediate Python for Data Science/Pandas.ipynb
+++ b/Intermediate Python for Data Science/Pandas.ipynb
@@ -246,18 +246,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### loc"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "label-based  \n",
     "ex:\n",
@@ -289,14 +285,14 @@
     "ex:\n",
     "1. Row access\n",
     "    1. series\n",
-    "            beic.loc[1]\n",
+    "            beic.iloc[1]\n",
     "            \n",
     "    2. dataframe\n",
-    "            beic.loc[[1, 2, 3]]\n",
+    "            beic.iloc[[1, 2, 3]]\n",
     "2. Cloumn access\n",
-    "        beic.loc[:, [0, 1]]\n",
+    "        beic.iloc[:, [0, 1]]\n",
     "3. Row & Cloumn access\n",
-    "        beic.loc[[1, 2, 3], [0, 1]]\n",
+    "        beic.iloc[[1, 2, 3], [0, 1]]\n",
     "\n",
     "same result as using loc"
    ]
