--- a/Course_1_Introduction to Python/CH2_Function & Methods.ipynb
+++ b/Course_1_Introduction to Python/CH2_Function & Methods.ipynb
@@ -4,10 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Funtion\n",
-    "    piece of reusable code\n",
-    "    solvees particular task\n",
-    "    call function instead of writing code yourself\n",
+    "# Function & Methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Function\" data-toc-modified-id=\"Function-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Function</a></span></li><li><span><a href=\"#Methods:\" data-toc-modified-id=\"Methods:-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Methods:</a></span></li><li><span><a href=\"#Packages\" data-toc-modified-id=\"Packages-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Packages</a></span></li><li><span><a href=\"#Numpy\" data-toc-modified-id=\"Numpy-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Numpy</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Function\n",
+    "* piece of reusable code\n",
+    "* solvees particular task\n",
+    "* call function instead of writing code yourself\n",
     "    "
    ]
   },
@@ -88,8 +105,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Methods:\n",
-    "    Functions that belong to objects"
+    "## Methods:\n",
+    "* Functions that belong to objects"
    ]
   },
   {
@@ -189,137 +206,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Packages\n",
-    "    directory of python scripts\n",
-    "    each scripts = module\n",
-    "    specify functions, methods, types"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Numpy\n",
-    "    np.array contain only one type\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "# Create list baseball\n",
-    "baseball = [180, 215, 210, 210, 188, 176, 209, 200]\n",
-    "\n",
-    "# Create a numpy array from baseball: np_baseball\n",
-    "np_baseball = np.array(baseball)\n",
-    "\n",
-    "# Print out type of np_baseball\n",
-    "print(type(np_baseball))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ True  True False False False]\n",
-      "[20.1 19. ]\n",
-      "38.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# height and weight are available as a regular lists\n",
-    "\n",
-    "# Import numpy\n",
-    "import numpy as np\n",
-    "\n",
-    "# Calculate the BMI: bmi\n",
-    "bmi = np.array([20.1, 19, 25, 38, 41])\n",
-    "\n",
-    "# Create the light array\n",
-    "light = bmi < 21\n",
-    "\n",
-    "# Print out light\n",
-    "print(light)\n",
-    "\n",
-    "# Print out BMIs of all baseball players whose BMI is below 21\n",
-    "print(bmi[light])\n",
-    "print(bmi[3])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ndarray = N-dimensional array\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np_baseball is available\n",
-    "\n",
-    "# Import numpy\n",
-    "import numpy as np\n",
-    "\n",
-    "# Create np_height_in from np_baseball\n",
-    "np_height_in = np.array(np_baseball[:,0])\n",
-    "\n",
-    "# Print out the mean of np_height_in\n",
-    "print(np.mean(np_height_in))\n",
-    "\n",
-    "# Print out the median of np_height_in\n",
-    "print(np.median(np_height_in))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''Ex:\n",
-    "    Explore the baseball data'''\n",
-    "# np_baseball is available\n",
-    "\n",
-    "# Import numpy\n",
-    "import numpy as np\n",
-    "\n",
-    "# Print mean height (first column)\n",
-    "avg = np.mean(np_baseball[:,0])\n",
-    "print(\"Average: \" + str(avg))\n",
-    "\n",
-    "# Print median height. Replace 'None'\n",
-    "med = np.median(np_baseball[:, 0])\n",
-    "print(\"Median: \" + str(med))\n",
-    "\n",
-    "# Print out the standard deviation on height. Replace 'None'\n",
-    "stddev = np.std(np_baseball[:, 0])\n",
-    "print(\"Standard Deviation: \" + str(stddev))\n",
-    "\n",
-    "# Print out correlation between first and second column. Replace 'None'\n",
-    "corr = np.corrcoef(np_baseball[:, 0])\n",
-    "print(\"Correlation: \" + str(corr))"
+    "## Packages\n",
+    "* directory of python scripts\n",
+    "* each scripts = module\n",
+    "* specify functions, methods, types"
    ]
   }
  ],
@@ -340,6 +230,48 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
