--- a/Course_1_Introduction to Python/CH1_List.ipynb
+++ b/Course_1_Introduction to Python/CH1_List.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc": true
+   },
    "source": [
-    "List Manipulation\n",
-    "    Changing list element\n",
-    "    Adding and removing element\n",
-    "    "
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#List-Manipulation\" data-toc-modified-id=\"List-Manipulation-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>List Manipulation</a></span><ul class=\"toc-item\"><li><span><a href=\"#exercise\" data-toc-modified-id=\"exercise-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>exercise</a></span></li></ul></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "behind the scenes 1"
+    "## List Manipulation\n",
+    "* Changing list element\n",
+    "* Adding and removing element\n",
+    "    "
    ]
   },
   {
@@ -89,8 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EX:\n",
-    "    Replace list elements"
+    "###  exercise"
    ]
   },
   {
@@ -211,7 +213,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
