--- a/Course_2_Intermediate Python for Data Science/CH4_Logic, Control Flow and Filtering.ipynb
+++ b/Course_2_Intermediate Python for Data Science/CH4_Logic, Control Flow and Filtering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparison Operators"
+    "# Logic, Control Flow and Filtering"
    ]
   },
   {
@@ -14,14 +14,14 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Comparators\" data-toc-modified-id=\"Comparators-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Comparators</a></span></li><li><span><a href=\"#Comparisons\" data-toc-modified-id=\"Comparisons-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Comparisons</a></span><ul class=\"toc-item\"><li><span><a href=\"#Boolean-Operators\" data-toc-modified-id=\"Boolean-Operators-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Boolean Operators</a></span></li></ul></li><li><span><a href=\"#Conditional-Statements\" data-toc-modified-id=\"Conditional-Statements-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Conditional Statements</a></span></li><li><span><a href=\"#Filtering-Pandas-DataFrame\" data-toc-modified-id=\"Filtering-Pandas-DataFrame-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Filtering Pandas DataFrame</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Comparison-Operators\" data-toc-modified-id=\"Comparison-Operators-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Comparison Operators</a></span><ul class=\"toc-item\"><li><span><a href=\"#Comparisons\" data-toc-modified-id=\"Comparisons-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Comparisons</a></span></li></ul></li><li><span><a href=\"#Boolean-Operators\" data-toc-modified-id=\"Boolean-Operators-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Boolean Operators</a></span></li><li><span><a href=\"#Conditional-Statements\" data-toc-modified-id=\"Conditional-Statements-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Conditional Statements</a></span></li><li><span><a href=\"#Filtering-Pandas-DataFrame\" data-toc-modified-id=\"Filtering-Pandas-DataFrame-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Filtering Pandas DataFrame</a></span></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparators"
+    "## Comparison Operators"
    ]
   },
   {
@@ -46,12 +46,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparisons"
+    "### Comparisons"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "code_folding": []
    },
@@ -98,11 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -131,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Boolean Operators"
+    "## Boolean Operators"
    ]
   },
   {
@@ -146,14 +144,13 @@
     "    * return the opposite of the statement\n",
     "\n",
     "np.array \n",
-    "* np.array > 21 and np.array < 22 是行不通的\n",
-    "* 要用\n",
+    "* np.logical_and()\n",
     "        np.logical_and(np.array > 21, np.array < 22)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +190,7 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -256,9 +253,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "looking around in the kitchen.\n",
+      "pretty small.\n"
+     ]
+    }
+   ],
    "source": [
     "# Define variables\n",
     "room = \"kit\"\n",
@@ -279,9 +285,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "looking around in the bedroom.\n",
+      "medium size, nice!\n"
+     ]
+    }
+   ],
    "source": [
     "# Define variables\n",
     "room = \"bed\"\n",
@@ -322,23 +337,21 @@
     "    * \n",
     "            ture_false_series = pandas_dataframe_name[\"col_title\"] > 15\n",
     "    * type of ture_false_series = Pandas Series  \n",
-    "    * data type of ture_false_series = bool\n",
+    "    * type of elements in ture_false_series = bool\n",
     "3. Subset DateFrame\n",
-    "    * in\n",
+    "    * input\n",
     "        1. \n",
     "                pandas_dataframe_name[ture_false_series]\n",
     "        2. \n",
     "                pandas_dataframe_name[pandas_dataframe_name[\"col_title\"] > 15]\n",
-    "    * out  \n",
+    "    * output  \n",
     "        The subset of pandas_dataframe_name if the corresponding value of crossponding is True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -357,7 +370,8 @@
       "           country  drives_right  cars_per_cap\n",
       "US   United States          True           809\n",
       "AUS      Australia         False           731\n",
-      "JAP          Japan         False           588\n"
+      "JAP          Japan         False           588\n",
+      "<class 'pandas.core.frame.DataFrame'>\n"
      ]
     }
    ],
@@ -382,12 +396,12 @@
     "car_maniac = cars[cars[\"cars_per_cap\"] > 500]\n",
     "\n",
     "# Print car_maniac\n",
-    "print(car_maniac)"
+    "print(car_maniac)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -413,69 +427,6 @@
     "# Print medium\n",
     "print(medium)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
