--- a/jupyter_notebook_basis.ipynb
+++ b/jupyter_notebook_basis.ipynb
@@ -14,7 +14,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#設定你的jupyter-notebook\" data-toc-modified-id=\"設定你的jupyter-notebook-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>設定你的jupyter notebook</a></span><ul class=\"toc-item\"><li><span><a href=\"#notebook-環境設定\" data-toc-modified-id=\"notebook-環境設定-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>notebook 環境設定</a></span></li><li><span><a href=\"#notebook-起始資料夾路徑設定\" data-toc-modified-id=\"notebook-起始資料夾路徑設定-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>notebook 起始資料夾路徑設定</a></span></li><li><span><a href=\"#安裝jupyter-notebook-擴充套件\" data-toc-modified-id=\"安裝jupyter-notebook-擴充套件-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>安裝jupyter notebook 擴充套件</a></span></li></ul></li><li><span><a href=\"#使用jupyter-notebook\" data-toc-modified-id=\"使用jupyter-notebook-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>使用jupyter notebook</a></span><ul class=\"toc-item\"><li><span><a href=\"#新增notebook、資料夾\" data-toc-modified-id=\"新增notebook、資料夾-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>新增notebook、資料夾</a></span></li><li><span><a href=\"#Cell\" data-toc-modified-id=\"Cell-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Cell</a></span></li><li><span><a href=\"#快捷鍵與輸入模式\" data-toc-modified-id=\"快捷鍵與輸入模式-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>快捷鍵與輸入模式</a></span></li></ul></li><li><span><a href=\"#Conditional-Statements\" data-toc-modified-id=\"Conditional-Statements-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Conditional Statements</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#設定你的jupyter-notebook\" data-toc-modified-id=\"設定你的jupyter-notebook-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>設定你的jupyter notebook</a></span><ul class=\"toc-item\"><li><span><a href=\"#notebook-環境設定\" data-toc-modified-id=\"notebook-環境設定-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>notebook 環境設定</a></span></li><li><span><a href=\"#notebook-起始資料夾路徑設定\" data-toc-modified-id=\"notebook-起始資料夾路徑設定-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>notebook 起始資料夾路徑設定</a></span></li><li><span><a href=\"#安裝jupyter-notebook-擴充套件\" data-toc-modified-id=\"安裝jupyter-notebook-擴充套件-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>安裝jupyter notebook 擴充套件</a></span></li><li><span><a href=\"#Jupyter-notebook-Themes\" data-toc-modified-id=\"Jupyter-notebook-Themes-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Jupyter notebook Themes</a></span></li></ul></li><li><span><a href=\"#使用jupyter-notebook\" data-toc-modified-id=\"使用jupyter-notebook-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>使用jupyter notebook</a></span><ul class=\"toc-item\"><li><span><a href=\"#新增notebook、資料夾\" data-toc-modified-id=\"新增notebook、資料夾-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>新增notebook、資料夾</a></span></li><li><span><a href=\"#Cell\" data-toc-modified-id=\"Cell-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Cell</a></span></li><li><span><a href=\"#快捷鍵與輸入模式\" data-toc-modified-id=\"快捷鍵與輸入模式-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>快捷鍵與輸入模式</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -95,16 +95,36 @@
     "    2. [套件功能參考2](https://zhuanlan.zhihu.com/p/33674838)\n",
     "    3. 常用套件\n",
     "        1. Code prettify\n",
-    "        2. Collapsible Headings\n",
+    "        2. split cells notebook\n",
     "        3. Table of Contents (2)\n",
     "        4. Variable Inspector\n",
     "        5. ScrollDown\n",
+    "        6. Scratchpad\n",
+    "        7. codefloding\n",
     "    4. 可能會有用的\n",
     "        1. (some) LaTeX environments for Jupyter\n",
     "            可以插入公式\n",
     "        2. Exercise2\n",
     "            新cell type: Exercise\n",
     "        3. Highlight selected word"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Jupyter notebook Themes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 一種風格套件\n",
+    "+ [官方網站](https://github.com/dunovank/jupyter-themes)\n",
+    "+ For mac 13\"\n",
+    "    + jt -t oceans16 -T -fs 14 -ofs 14 -nfs 16 -tfs 16 -dfs 11  -N -kl\n",
+    "\n"
    ]
   },
   {
@@ -447,9 +467,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DateCamp",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "datecamp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
