--- a/Course_1_Introduction to Python/Projects.ipynb
+++ b/Course_1_Introduction to Python/Projects.ipynb
@@ -66,9 +66,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DateCamp",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "datecamp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -80,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
