--- a/Course_2_Intermediate Python for Data Science/CH3_Pandas.ipynb
+++ b/Course_2_Intermediate Python for Data Science/CH3_Pandas.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -64,6 +64,16 @@
       "MOR        Morocco          True            70\n",
       "EG           Egypt          True            45\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"cars.to_csv(\\n    '/Users/ellick/Documents/GitHub/DataCamp/Course_2_Intermediate Python for Data Science/pandas_examples/cars(1).csv'\\n)  # 絕對路徑\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -94,9 +104,9 @@
     "\n",
     "# 輸出 .csv檔\n",
     "cars.to_csv('pandas_examples/cars.csv')  # 相對路徑\n",
-    "cars.to_csv(\n",
-    "    'E:\\Documents\\GitHub\\DataCamp\\Intermediate Python for Data Science\\pandas_examples\\cars(1).csv'\n",
-    ")  # 絕對路徑"
+    "'''cars.to_csv(\n",
+    "    '/Users/ellick/Documents/GitHub/DataCamp/Course_2_Intermediate Python for Data Science/pandas_examples/cars(1).csv'\n",
+    ")  # 絕對路徑'''"
    ]
   },
   {
@@ -176,9 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [
@@ -299,54 +308,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "country         Japan\n",
-      "drives_right    False\n",
-      "cars_per_cap      588\n",
-      "Name: JAP, dtype: object\n",
-      "       country  drives_right  cars_per_cap\n",
-      "AUS  Australia         False           731\n",
-      "EG       Egypt          True            45\n",
-      "     drives_right\n",
-      "MOR          True\n",
-      "     country  drives_right\n",
-      "MOR  Morocco          True\n",
-      "RU    Russia          True\n",
-      "US      True\n",
-      "AUS    False\n",
-      "JAP    False\n",
-      "IN     False\n",
-      "RU      True\n",
-      "MOR     True\n",
-      "EG      True\n",
-      "Name: drives_right, dtype: bool\n",
-      "     drives_right\n",
-      "US           True\n",
-      "AUS         False\n",
-      "JAP         False\n",
-      "IN          False\n",
-      "RU           True\n",
-      "MOR          True\n",
-      "EG           True\n",
-      "     cars_per_cap  drives_right\n",
-      "US            809          True\n",
-      "AUS           731         False\n",
-      "JAP           588         False\n",
-      "IN             18         False\n",
-      "RU            200          True\n",
-      "MOR            70          True\n",
-      "EG             45          True\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Import cars data\n",
     "import pandas as pd\n",
@@ -399,9 +363,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DateCamp",
+   "display_name": "Python [conda env:datacamp] *",
    "language": "python",
-   "name": "datecamp"
+   "name": "conda-env-datacamp-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -413,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
