--- a/Course_2_Intermediate Python for Data Science/CH2_Dictionary.ipynb
+++ b/Course_2_Intermediate Python for Data Science/CH2_Dictionary.ipynb
@@ -235,9 +235,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DateCamp",
+   "display_name": "Python [conda env:datacamp] *",
    "language": "python",
-   "name": "datecamp"
+   "name": "conda-env-datacamp-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -249,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
