--- a/Course_2_Intermediate Python for Data Science/CH5_Loop.ipynb
+++ b/Course_2_Intermediate Python for Data Science/CH5_Loop.ipynb
@@ -419,7 +419,7 @@
     "1. for loop\n",
     "        for for var1,var2 in pd_DF_name.iterrows():\n",
     "            pd_DF_name.loc[var1, 'new_column_name'] = var2['column_name'].upper()\n",
-    "    * 呼叫pd_DF對應位置(無此column → 創建) = 使用方法與資料來源\n",
+    "                呼叫pd_DF對應位置(無此column → 創建) = 使用方法與資料來源\n",
     "    * 需要訪問原始資料中的每一row，取得對應的 column 資訊後才產生新column\n",
     "      若原始pd_DF龐大的話效率低\n",
     "    * .loc[var1, var2] : label_based pd_DF 存取方法\n",
@@ -468,9 +468,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DateCamp",
+   "display_name": "Python [conda env:datacamp] *",
    "language": "python",
-   "name": "datecamp"
+   "name": "conda-env-datacamp-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -482,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
