Update CH3_Lambda functions and error-handling.ipynb

--- a/Course_3_Python Data Science Toolbox/CH3_Lambda functions and error-handling.ipynb
+++ b/Course_3_Python Data Science Toolbox/CH3_Lambda functions and error-handling.ipynb
@@ -17,7 +17,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Lambda-functions\" data-toc-modified-id=\"Lambda-functions-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Lambda functions</a></span></li><li><span><a href=\"#Introduction-to-error-handling\" data-toc-modified-id=\"Introduction-to-error-handling-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Introduction to error handling</a></span></li><li><span><a href=\"#Exercises\" data-toc-modified-id=\"Exercises-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Exercises</a></span><ul class=\"toc-item\"><li><span><a href=\"#ex1\" data-toc-modified-id=\"ex1-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>ex1</a></span></li><li><span><a href=\"#ex2\" data-toc-modified-id=\"ex2-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>ex2</a></span></li></ul></li><li><span><a href=\"#Summary-from-CH1-to-CH3\" data-toc-modified-id=\"Summary-from-CH1-to-CH3-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Summary from CH1 to CH3</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Lambda-functions\" data-toc-modified-id=\"Lambda-functions-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Lambda functions</a></span></li><li><span><a href=\"#Introduction-to-error-handling\" data-toc-modified-id=\"Introduction-to-error-handling-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Introduction to error handling</a></span></li><li><span><a href=\"#Exercises\" data-toc-modified-id=\"Exercises-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Exercises</a></span><ul class=\"toc-item\"><li><span><a href=\"#ex1\" data-toc-modified-id=\"ex1-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>ex1</a></span></li><li><span><a href=\"#ex2\" data-toc-modified-id=\"ex2-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>ex2</a></span></li></ul></li><li><span><a href=\"#Summary-of-CH1---CH3\" data-toc-modified-id=\"Summary-of-CH1---CH3-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Summary of CH1 - CH3</a></span></li></ul></div>"
    ]
   },
   {
@@ -558,7 +558,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summary from CH1 to CH3"
+    "## Summary of CH1 - CH3"
    ]
   },
   {
