--- a/Course_3_Python Data Science Toolbox/CH6_Case Study.ipynb
+++ b/Course_3_Python Data Science Toolbox/CH6_Case Study.ipynb
@@ -994,7 +994,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:datacamp] *",
+   "display_name": "Python [conda env:datacamp]",
    "language": "python",
    "name": "conda-env-datacamp-py"
   },
