--- a/Course_2_Intermediate Python for Data Science/CH3_Pandas.ipynb
+++ b/Course_2_Intermediate Python for Data Science/CH3_Pandas.ipynb
@@ -463,7 +463,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:datacamp] *",
+   "display_name": "Python [conda env:datacamp]",
    "language": "python",
    "name": "conda-env-datacamp-py"
   },
