Update CH4_Using iterators in PythonLand.ipynb

--- a/Course_3_Python Data Science Toolbox/CH4_Using iterators in PythonLand.ipynb
+++ b/Course_3_Python Data Science Toolbox/CH4_Using iterators in PythonLand.ipynb
@@ -1452,7 +1452,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:datacamp] *",
+   "display_name": "Python [conda env:datacamp]",
    "language": "python",
    "name": "conda-env-datacamp-py"
   },
