Update CH3_Lambda functions and error-handling.ipynb

--- a/Course_3_Python Data Science Toolbox/CH3_Lambda functions and error-handling.ipynb
+++ b/Course_3_Python Data Science Toolbox/CH3_Lambda functions and error-handling.ipynb
@@ -38,7 +38,7 @@
     "                example = func_name_u_def(v1, v2, ...)\n",
     "    2. situation 2:\n",
     "        + define a function in another function which contains a function parameter\n",
-    "                example = func_contain_parameter(lambda v1, v2, ... : function body, \n",
+    "                example = func_contain_func(lambda v1, v2, ... : function body, \n",
     "                v1_object, v2_object)"
    ]
   },
@@ -581,7 +581,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:datacamp] *",
+   "display_name": "Python [conda env:datacamp]",
    "language": "python",
    "name": "conda-env-datacamp-py"
   },
