--- a/Course_3_Python Data Science Toolbox/CH5_List comprehensions and generators.ipynb
+++ b/Course_3_Python Data Science Toolbox/CH5_List comprehensions and generators.ipynb
@@ -358,7 +358,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:datacamp] *",
+   "display_name": "Python [conda env:datacamp]",
    "language": "python",
    "name": "conda-env-datacamp-py"
   },
