--- a/Course_2_Intermediate Python for Data Science/CH2_Dictionary.ipynb
+++ b/Course_2_Intermediate Python for Data Science/CH2_Dictionary.ipynb
@@ -114,7 +114,6 @@
    "execution_count": 7,
    "metadata": {
     "code_folding": [
-     1,
      20
     ]
    },
@@ -179,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +234,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:datacamp] *",
+   "display_name": "Python [conda env:datacamp]",
    "language": "python",
    "name": "conda-env-datacamp-py"
   },
