--- a/Course_3_Python Data Science Toolbox/CH3_Lambda functions and error-handling.ipynb
+++ b/Course_3_Python Data Science Toolbox/CH3_Lambda functions and error-handling.ipynb
@@ -581,7 +581,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:datacamp]",
+   "display_name": "Python [conda env:datacamp] *",
    "language": "python",
    "name": "conda-env-datacamp-py"
   },
